--- a/assets/css/meyawo.css
+++ b/assets/css/meyawo.css
@@ -12246,5 +12246,27 @@ pre .code {
   text-align: center;
  }
 
+ .container-video {
+  position: relative;
+  top: -45rem;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: center;
+}
+
+.iframe-container{
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; 
+  height: 0;
+  }
+  .iframe-container iframe{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  }
+
 
 
